tests/paczka1/small_fuzzy/43208152.err
Error in line 3: S257 S257 61,4
Error in line 6: 5Cqx1i S866 19,7
Error in line 8: 5Cqx1i S257 64,6
Error in line 9: 5Cqx1i A369 80,1
